--- a/introduction/style.css
+++ b/introduction/style.css
@@ -5,6 +5,10 @@
 /*--------------------------------------------------*/
 
 
+body, html, a, p {
+    touch-action: auto;
+}
+
 /*ここからメイン*/
 main {
     display: flex;
