--- a/introduction/style.css
+++ b/introduction/style.css
@@ -7,6 +7,7 @@
 
 body, html, a, p {
     touch-action: auto;
+    overflow: hidden;
 }
 
 /*ここからメイン*/
@@ -26,7 +27,7 @@ main {
     transform: translateY(20px);
     transition: opacity .6s ease, transform 1.2s ease;
     z-index: 0;
-    overflow: hidden;
+    //overflow: hidden;
     &:hover {
         opacity: 1;
         transform: translateY(0);
